# browser-challenge

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pom.xml
.github/workflows/: release-ghcr.yml
script/: Dockerfile.envoy  Dockerfile.envoy.patched  build-envoy-patched.sh  envoy.yml  gen-certs.sh
script/envoy-patch/: README.md  envoy-ja3-raw.patch
script/h2-fp-plugin/: Cargo.toml  Makefile  README.md  build.sh
script/h2-fp-plugin/src/: lib.rs
script/plugins/: README.md
src/main/java/cn/gydev/challenge/: DemoApplication.java
src/main/java/cn/gydev/challenge/config/: GydevGuardConfiguration.java  RiskGateProperties.java
src/main/java/cn/gydev/challenge/controller/: AppMetaController.java  GydevGuardController.java  HelloController.java  RiskWhitelistController.java  TlsController.java
src/main/java/cn/gydev/challenge/service/: RiskChallengeService.java  RiskFingerprintWhitelistRepository.java  RiskSignalGateService.java  TlsClassifierService.java
src/main/java/cn/gydev/challenge/service/gydev/: GydevEvaluationPayload.java  GydevEvaluationResult.java  GydevGuardConfig.java  (+4 more)
src/main/resources/: application.yml  schema.sql
src/main/resources/static/: gydev-guard-sdk.js  gydev-guard-sdk.ts  risk-demo.html  white.html
src/test/java/cn/gydev/challenge/: DemoApplicationTest.java
src/test/java/cn/gydev/challenge/controller/: GydevGuardControllerTest.java  TlsControllerTest.java
src/test/java/cn/gydev/challenge/service/: RiskChallengeServiceTest.java  RiskSignalGateServiceTest.java  TlsClassifierServiceTest.java
(+1 files in other folders)
