[package]
name = "h2-fp-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Envoy network wasm filter to extract H2 fingerprint metadata"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha2 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
proxy-wasm = "0.2.4"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = true
